<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/material_dynamic_secondary95"

    tools:context=".service.authentication.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/edittext_background"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/edittext_background">

                <!-- Welcome TextView -->
                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up_here"
                    android:textColor="@color/neutral"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- Name TextView and EditText -->
                <TextView
                    android:id="@+id/names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/welcome"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"
                    android:textColor="@color/neutral"
                    android:textStyle="bold" />

                <EditText
                    android:drawableStart="@drawable/ic_username"
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/names"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/your_name"
                    android:padding="12dp"
                    android:textColorHint="@color/neutral" />

                <!-- Email TextView and EditText -->
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_name"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textColor="@color/neutral"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_email"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/add_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColorHint="@color/neutral" />

                <!-- Password TextView and EditText -->
                <TextView
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_email"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textColor="@color/neutral"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pass"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_password"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/add_your_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColorHint="@color/neutral" />

                <!-- Register Button -->
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="283dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_password"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/create_account"
                    android:textColor="@android:color/white"
                    app:cornerRadius="16dp" />

                <!-- Divider Line -->
                <View
                    android:id="@+id/divider_line"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_below="@id/register_button"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorgray01" />

                <!-- Already have an account Button -->
                <Button
                    android:id="@+id/homepage"
                    android:layout_width="286dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider_line"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/already_have_a_account_sign_in"
                    android:textColor="@android:color/white"
                    app:cornerRadius="16dp" />

            </RelativeLayout>
        </FrameLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
