<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_nature"
    tools:context=".service.authentication.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Blurred Container -->
        <FrameLayout
            android:id="@+id/blur_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="16dp">

                <!-- Welcome TextView -->
                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/use_a_local_account_to_log_in"
                    android:textColor="@color/neutral"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- Email TextView -->
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/welcome"
                    android:layout_marginTop="20dp"
                    android:text="@string/email"
                    android:textColor="@color/neutral"
                    android:textStyle="bold" />

                <!-- Email EditText -->
                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/add_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/neutral" />

                <!-- Password TextView -->
                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_email"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textColor="@color/neutral"
                    android:textStyle="bold" />

                <!-- Password EditText -->
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/add_your_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/neutral" />

                <!-- Login Button -->
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/forgot_password"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/log_in"
                    android:textColor="@android:color/white" />

                <!-- Forgot Password TextView -->
                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_password"
                    android:layout_marginTop="16dp"
                    android:text="@string/forgot_your_password"
                    android:textAlignment="center"
                    android:textColor="@color/neutral"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <!-- Register New Account TextView -->
                <TextView
                    android:id="@+id/needs_new_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_button"
                    android:layout_marginTop="16dp"
                    android:text="@string/register_as_a_new_user"
                    android:textAlignment="center"
                    android:textColor="@color/neutral"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </FrameLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
